// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should render 1`] = `
<DocumentFragment>
  <textarea
    class="Input__InputStyled-wu99qs-0 hYmkQN overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 "
    data-testid="TextArea"
    style="height: 4px;"
  />
</DocumentFragment>
`;

exports[`TextArea should render as disabled 1`] = `
<DocumentFragment>
  <textarea
    class="Input__InputStyled-wu99qs-0 hYmkQN overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 "
    data-testid="TextArea"
    disabled=""
  />
</DocumentFragment>
`;

exports[`TextArea should render as invalid 1`] = `
<DocumentFragment>
  <textarea
    aria-invalid="true"
    class="Input__InputStyled-wu99qs-0 hYmkQN overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 "
    data-testid="TextArea"
  />
</DocumentFragment>
`;
